tests/typing/fail/while_expr_bool.crs
fn test() {
    var a : i32 = 2;
    while a {

    }
}